[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]

[node name="Root" type="Spatial"]

[node name="CSGBox" type="CSGBox" parent="."]
width = 7.5
height = 0.05
depth = 7.5

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.986182, 0.165667, 0, -0.165667, 0.986182, 0, 2.26039, 5.56684 )

[node name="Player" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58094, 0.619985, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Enemy" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.58773, 0.562827, 0 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattlePanel" type="Panel" parent="Control"]
margin_left = 52.8252
margin_top = 11.7986
margin_right = 946.825
margin_bottom = 149.799
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthText" type="Label" parent="Control/BattlePanel"]
margin_left = 17.818
margin_top = 25.8361
margin_right = 57.818
margin_bottom = 39.8361
text = "Health: 10/10"

[node name="PlayerManaText" type="Label" parent="Control/BattlePanel"]
margin_left = 184.416
margin_top = 24.9452
margin_right = 263.416
margin_bottom = 38.9452
text = "Mana: 10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyText" type="Label" parent="Control/BattlePanel"]
margin_left = 327.27
margin_top = 26.1272
margin_right = 399.27
margin_bottom = 40.1272
text = "Coins: 0"

[node name="LevelText" type="Label" parent="Control/BattlePanel"]
margin_left = 416.938
margin_top = 27.071
margin_right = 488.938
margin_bottom = 41.071
text = "Level: 1"

[node name="EnemyHealthText" type="Label" parent="Control/BattlePanel"]
margin_left = 706.483
margin_top = 98.8898
margin_right = 832.483
margin_bottom = 112.89
text = "Enemy Health: 0/10"

[node name="CharacterPanel" type="Panel" parent="Control"]
margin_left = 54.0
margin_top = 182.0
margin_right = 303.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="Control/CharacterPanel"]
margin_left = 24.0
margin_top = 27.0
margin_right = 101.0
margin_bottom = 57.0
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagicButton" type="Button" parent="Control/CharacterPanel"]
margin_left = 138.551
margin_top = 27.0
margin_right = 215.551
margin_bottom = 57.0
text = "Magic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefendButton" type="Button" parent="Control/CharacterPanel"]
margin_left = 25.0
margin_top = 79.0
margin_right = 99.0
margin_bottom = 106.0
text = "Defend"

[node name="SkipButton" type="Button" parent="Control/CharacterPanel"]
margin_left = 138.0
margin_top = 76.0
margin_right = 217.0
margin_bottom = 104.0
text = "Skip"

[connection signal="pressed" from="Control/CharacterPanel/AttackButton" to="Player" method="_on_AttackButton_pressed"]
[connection signal="pressed" from="Control/CharacterPanel/MagicButton" to="Player" method="_on_MagicButton_pressed"]
[connection signal="pressed" from="Control/CharacterPanel/DefendButton" to="Player" method="_on_DefendButton_pressed"]
[connection signal="pressed" from="Control/CharacterPanel/SkipButton" to="Player" method="_on_SkipButton_pressed"]
